--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
-﻿{
+{
+    "omnisharp.path": "latest",
+    "csharp.unitTestDebuggingOptions": {},
     "files.exclude":
     {
         "**/.DS_Store":true,
